<resources>
    <string name="app_name">Kitchen Helper</string>
    <string name="image">Kitchen Helper Logo goes here</string>
    <string name="search">Search Recipes</string>
    <string name="favorites">Favorite Recipes</string>
    <string name="shop_list">Shopping List</string>
    <string name="measure">Measurement Converter</string>
    <string name="enter">IDK WHAT THIS SHOULD BE</string>
    <string name="search_button">Search</string>
    <string name="first_ing">First Ingredient</string>
    <string name="second_ing">Second Ingredient</string>
    <string name="API">http://www.recipepuppy.com/api/?i=</string>
    <string name="ingredient">Ingredient:</string>
    <string name="quantity">quantity</string>
    <string name="addIngredient">Add Ingredient</string>
    <string name="load_database">Load Database</string>
    <string name="kitchen_helper">Kitchen Helper</string>
    <string name="favorite_recipes">Favorite Recipes</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="time_limit">Time Limit</string>
    <string name="directions">Directions</string>
    <string name="ingredients">Ingredients</string>
    <string name="info">Info</string>
    <string name="information">INFORMATION</string>
    <string name="InfoDetails">Welcome to Kitchen Helper! \n With Kitchen Helper, you are able to search for recipes based on a two ingredient query using the search recipe button. \n You are also able to add your own recipes and favorite recipes from your query through the favorite recipe tab. \n Through the shopping list button, the user is able to add ingredients for a recipe. \n The measurement converter allows user to convert ingredients from imperial units to metric and the other way around. </string>
    <string name="first_ingredient">First Ingredient</string>
    <string name="second_ingredient">Second Ingredient</string>
    <string name="measurement">Measurement</string>
    <string name="number_to_convert">Number to convert</string>
    <string name="to">to</string>
    <string name="whatUnit">what unit?</string>
    <string name="convert">Convert</string>
</resources>