<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FavoriteRecipes"
    android:orientation="vertical">

    <TextView
        android:id="@+id/favoriteRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favorite_recipes"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/recipeNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipe_name"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/recipeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:id="@+id/timeLimitText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_limit"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/timeLimit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:id="@+id/ingredientsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingredients"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:id="@+id/directionsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/directions"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/directions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="200"/>

    <Button
        android:id="@+id/addRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_recipe"
        android:onClick="onClickAddRecipe" />

    <TextView
        android:id="@+id/resultRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>