<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ShoppingList">

    <!--Will not be a textview but rather a logo that I will make later-->
    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop_list"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/ingredientText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingredient"
        android:textSize="20sp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/ingredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="20"
        android:inputType="text" />

    <TextView
        android:id="@+id/quantityText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textSize="20sp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="20"
        android:inputType="text" />

    <Button
        android:id="@+id/addIngredient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addIngredient"
        android:onClick="onClickAddIngredient" />

</LinearLayout>